.provarCaches/00D5f000005vwGkEAI/objects/rstk__poprinthdr__c.object
<CustomObject>
    <description>poprinthdr__c</description>
    <fields>
        <fullName>rootstock__Vendor_Revision_Formula__c</fullName>
        <formula>&quot;Vendor Revision: &quot; &amp; TEXT(rstk__poprinthdr_vendrev__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Vendor Revision Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_adddte__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>po add date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_agreeno__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Agreement Number</label>
        <referenceTo>rstk__poagrhdr__c</referenceTo>
        <relationshipName>POPRINTHDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_billtoseqno__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Bill To Address Sequence Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_buyusrno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Responsible Buyer</label>
        <referenceTo>rstk__syusr__c</referenceTo>
        <relationshipName>POPRINTHDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Carrier</label>
        <referenceTo>rstk__sycarrier__c</referenceTo>
        <relationshipName>POPRINTHDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipName>divpoprinthdrs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_email1__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Email 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_email2__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Email 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_email3__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Email 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_fob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Freight On Board</label>
        <referenceTo>rstk__syfob__c</referenceTo>
        <relationshipName>POPRINTHDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_frghtrm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Freight Terms</label>
        <referenceTo>rstk__syfrghtrm__c</referenceTo>
        <relationshipName>POPRINTHDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_mailtoseqno__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Mail To Address Sequence Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_notes__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_ordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipName>POPRINTHDRs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_ordsts__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2-Firmed</fullName>
                </value>
                <value>
                    <fullName>3-Approvals Processing</fullName>
                </value>
                <value>
                    <fullName>4-Approved</fullName>
                </value>
                <value>
                    <fullName>5-Vendor Notified</fullName>
                </value>
                <value>
                    <fullName>7-Line Item Received</fullName>
                </value>
                <value>
                    <fullName>8-All Line Items Received</fullName>
                </value>
                <value>
                    <fullName>9-Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_shiptoseqno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship To Address Sequence Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_shipviatype__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ship Via</label>
        <referenceTo>rstk__syshipviatype__c</referenceTo>
        <relationshipName>POPRINTHDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Payment Terms</label>
        <referenceTo>rstk__syterms__c</referenceTo>
        <relationshipName>POPRINTHDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_totamt__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total PO Amount (Home Currency)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_totamtvcurr__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total PO Amount (Vendor Currency)</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_vendagreeno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor&apos;s Agreement Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_vendcontact__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_vendno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor</label>
        <referenceTo>rstk__povend__c</referenceTo>
        <relationshipName>POPRINTHDRs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_vendrev__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor Revision</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_vendrevdate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor Rev Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__poprinthdr_vendslsordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Vendor’s Sales Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>PO Print Header</label>
    <listViews>
        <fullName>rstk__PO_Print_Header</fullName>
        <columns>NAME</columns>
        <columns>rstk__poprinthdr_div__c</columns>
        <columns>rstk__poprinthdr_vendno__c</columns>
        <columns>rstk__poprinthdr_ordno__c</columns>
        <columns>rstk__poprinthdr_ordsts__c</columns>
        <columns>rstk__poprinthdr_totamtvcurr__c</columns>
        <columns>rstk__poprinthdr_billtoseqno__c</columns>
        <columns>rstk__poprinthdr_mailtoseqno__c</columns>
        <columns>rstk__poprinthdr_shiptoseqno__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__poprinthdr_vendcontact__c</columns>
        <filterScope>Everything</filterScope>
        <label>PO Print Header</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__PO_Print_Header_Select</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__poprinthdr_ordno__c</columns>
        <columns>rstk__poprinthdr_ordsts__c</columns>
        <columns>rstk__poprinthdr_totamt__c</columns>
        <columns>rstk__poprinthdr_totamtvcurr__c</columns>
        <columns>rstk__poprinthdr_vendno__c</columns>
        <columns>rstk__poprinthdr_vendcontact__c</columns>
        <columns>rstk__poprinthdr_vendslsordno__c</columns>
        <columns>rstk__poprinthdr_vendrevdate__c</columns>
        <columns>rstk__poprinthdr_vendrev__c</columns>
        <columns>rstk__poprinthdr_div__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__poprinthdr_ordno__c</field>
            <operation>contains</operation>
            <value>15056</value>
        </filters>
        <filters>
            <field>rstk__poprinthdr_div__c</field>
            <operation>contains</operation>
            <value>col</value>
        </filters>
        <label>PO Print Header - Select</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>POPRINTHDR Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>PO Print Headers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>